import java.util.Date;
import java.util.List;

public class Archivo {
    public String nombre;
    public String contenido;
    public Date fechaCreacion;
    public Date fechaModificacion;

    public List<VersionArchivo> obtenerHistorial() {
        return null;
    }
}
